@@ -1,5 +1,5 @@
 /*
-    Copyright 2008-2014, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2008-2015, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -254,12 +254,21 @@ namespace {
 }
 
 
-fostlib::network_connection::network_connection(std::auto_ptr< boost::asio::ip::tcp::socket > socket)
-: m_socket(socket), m_ssl_data(NULL) {
+fostlib::network_connection::network_connection(
+    boost::asio::io_service &io_service, std::auto_ptr< boost::asio::ip::tcp::socket > socket
+) : io_service(io_service), m_socket(socket), m_ssl_data(NULL)
+{
 }
 
+
+namespace {
+    boost::asio::io_service g_io_service;
+}
 fostlib::network_connection::network_connection(const host &h, nullable< port_number > p)
-: m_socket(new boost::asio::ip::tcp::socket(io_service)), m_ssl_data(NULL) {
+: io_service(g_io_service),
+        m_socket(new boost::asio::ip::tcp::socket(io_service)),
+        m_ssl_data(NULL)
+{
     const port_number port = p.value(coerce< port_number >(h.service().value("0")));
     json socks(c_socks_version.value());
 
